fix feature options not showing up in Safari

--- a/src/layout/FeaturesSection/index.scss
+++ b/src/layout/FeaturesSection/index.scss
@@ -35,11 +35,12 @@
       '...  title-div  ...'
       '...  select     ...';
 
-    .select {
+    ul.select {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
+      row-gap: 0.5em;
       margin: auto;
     }
   }
@@ -59,21 +60,14 @@
 // Feature Navigators
 .main-text-wrapper .select {
   grid-area: select;
-
-  display: -webkit-box;
-
-  display: -ms-flexbox;
-
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 
   position: relative;
+
+  list-style: none;
+  padding: 0;
 
   .option {
     color: rgb(145, 148, 161);
